--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Optimizi.App | Endüstriyel Hesaplama Platformu</title>
+<title>Industrial Energy Efficiency Calculation Platform</title>
 
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/lucide@latest"></script>
@@ -410,4 +410,5 @@
     }
 </script>
 </body>
+
 </html>
