--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!doctype html>
 <html lang="tr" class="dark">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Industrial Energy Efficiency Calculation Platform</title>
+<title>Optimizi.App | Industrial Energy Efficiency Platform</title>
 
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/lucide@latest"></script>
@@ -134,10 +133,15 @@
         </div>
         
         <nav class="flex flex-col gap-6">
+            <a href="tools.html" class="sidebar-link text-2xl font-bold text-slate-300 hover:text-white transition group flex items-center gap-4">
+                <span class="w-1 h-8 bg-purple-500 rounded-full scale-y-0 group-hover:scale-y-100 transition duration-300"></span>
+                <span data-i18n="nav_tools">Hesaplama Araçları</span>
+            </a>
+
             <a href="contact.html" class="sidebar-link text-2xl font-bold text-slate-300 hover:text-white transition group flex items-center gap-4">
-    <span class="w-1 h-8 bg-indigo-500 rounded-full scale-y-0 group-hover:scale-y-100 transition duration-300"></span>
-    <span data-i18n="nav_contact">İletişim</span>
-</a>
+                <span class="w-1 h-8 bg-indigo-500 rounded-full scale-y-0 group-hover:scale-y-100 transition duration-300"></span>
+                <span data-i18n="nav_contact">İletişim</span>
+            </a>
             <a href="#blog" onclick="toggleMenu()" class="sidebar-link text-2xl font-bold text-slate-300 hover:text-white transition group flex items-center gap-4">
                 <span class="w-1 h-8 bg-orange-500 rounded-full scale-y-0 group-hover:scale-y-100 transition duration-300"></span>
                 <span data-i18n="nav_blog">Blog</span>
@@ -256,7 +260,7 @@
                     <div><div class="inline-flex items-center gap-2 px-2 py-1 bg-indigo-500/10 border border-indigo-500/20 rounded text-[10px] font-bold text-indigo-400 mb-3 tracking-wider" data-i18n="lbl_auto">OTOMASYON</div><h3 class="text-3xl font-bold text-white mb-2" data-i18n="card_pdf_title">PDF Raporlama</h3><p class="text-sm text-slate-400 leading-relaxed" data-i18n="card_pdf_desc">Hesaplamalarınızı tek tıkla, görsellerle zenginleştirilmiş kurumsal raporlara dönüştürün.</p></div>
                     <div class="flex items-center gap-4 mt-4"><div class="w-12 h-12 rounded-full bg-indigo-600/20 border border-indigo-500/30 flex items-center justify-center text-indigo-400 group-hover:scale-110 group-hover:bg-indigo-600 group-hover:text-white transition duration-300"><i data-lucide="download" class="w-5 h-5"></i></div><span class="text-xs font-mono text-indigo-400/70 group-hover:text-indigo-400 transition">export_audit_v2.pdf</span></div>
                 </div>
-                <div class="absolute right-0 top-1/2 -translate-y-1/2 w-1/2 h-full hidden md:flex items-center justify-center perspective-1000 z-20">
+                <div class="absolute right-0 top-1/2 -translate-x-1/2 w-1/2 h-full hidden md:flex items-center justify-center perspective-1000 z-20">
                     <div class="relative w-48 h-64 bg-slate-800 rounded-lg border border-slate-600 shadow-2xl transform rotate-y-[-15deg] rotate-x-[10deg] group-hover:rotate-y-[0deg] group-hover:rotate-x-[0deg] transition duration-700 ease-out overflow-hidden">
                         <div class="scan-line"></div><div class="scan-overlay"></div>
                         <div class="p-5 space-y-3 opacity-80"><div class="flex items-center gap-2 mb-4"><div class="w-8 h-8 rounded-full bg-indigo-500/30"></div><div class="h-2 w-20 bg-slate-600 rounded"></div></div><div class="h-2 w-full bg-slate-700/50 rounded"></div><div class="h-2 w-5/6 bg-slate-700/50 rounded"></div><div class="h-2 w-full bg-slate-700/50 rounded"></div><div class="flex items-end gap-1 h-16 mt-4 pt-2 border-t border-slate-700/50"><div class="w-1/4 bg-indigo-500/40 h-[40%] rounded-t"></div><div class="w-1/4 bg-indigo-500/60 h-[70%] rounded-t"></div><div class="w-1/4 bg-indigo-500/80 h-[50%] rounded-t"></div><div class="w-1/4 bg-indigo-500 h-[90%] rounded-t"></div></div></div>
@@ -358,6 +362,9 @@
 
     const TRANSLATIONS = {
         tr: {
+            // YENİ EKLENEN
+            nav_tools: "Hesaplama Araçları",
+
             nav_contact: "İletişim", nav_blog: "Blog", nav_social: "Sosyal Medya",
             btn_tools: "Araçları İncele", hero_badge: "Enerji Verimliliği Hesaplamaları", hero_t1: "Görünmez Kayıpları", hero_t2: "Görünür Kılın.", hero_desc: "Endüstriyel tesislerdeki ısı kayıplarını, verimsiz hatları ve gereksiz maliyetleri mühendislik standartlarıyla analiz eden yeni nesil platform.",
             btn_learn: "Nasıl Çalışır?", sec_vis_title: "Veriyi Sanata Dönüştürün", sec_vis_desc: "Sadece hesaplama yapmayın. Sonuçları görselleştirin, raporlayın ve ikna edin. Karmaşık termal denklemlerin arkasındaki basit gerçeği görün.",
@@ -372,6 +379,9 @@
             footer_copy: "&copy; 2025 Optimizi Inc. Tüm hakları saklıdır.", lbl_uninsulated: "Yalıtımsız", lbl_critical: "Kritik", unit_month: "Ay"
         },
         en: {
+            // YENİ EKLENEN
+            nav_tools: "Calculation Tools",
+
             nav_contact: "Contact", nav_blog: "Blog", nav_social: "Social Media",
             btn_tools: "Explore Tools", hero_badge: "Energy Efficiency Calculations", hero_t1: "Make Invisible Losses", hero_t2: "Visible.", hero_desc: "Next-gen platform analyzing heat losses, inefficient lines, and unnecessary costs in industrial facilities with engineering standards.",
             btn_learn: "How it Works?", sec_vis_title: "Turn Data into Art", sec_vis_desc: "Don't just calculate. Visualize, report, and persuade with results. See the simple truth behind complex thermal equations.",
@@ -410,5 +420,4 @@
     }
 </script>
 </body>
-
 </html>
