--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Optimizi.App | Industrial Energy Efficiency Platform</title>
+<title>Optimizi.App</title>
 
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/lucide@latest"></script>
@@ -421,3 +421,4 @@
 </script>
 </body>
 </html>
+
