--- a/tool/air.html
+++ b/tool/air.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Basınçlı Hava Kaçak Analizi | Optimizi.App</title>
+<title>Compressed Air Leak Analysis</title>
 
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/lucide@latest"></script>
@@ -466,4 +466,5 @@
     }
 </script>
 </body>
+
 </html>
