--- a/tool/air.html
+++ b/tool/air.html
@@ -4,6 +4,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Compressed Air Leak Analysis</title>
+  <meta name="description" content="Basınçlı hava sistemlerindeki kaçak debisini ve yıllık maliyetini ISO 1217 standartlarına göre hesaplayın. Anlık analiz ve PDF raporlama aracı.">
+<meta name="keywords" content="basınçlı hava kaçağı, hava kaçağı hesabı, kompresör enerji verimliliği, hava kaçağı maliyeti, iso 1217 hesaplama, cagi standartları">
+
+<meta property="og:title" content="Basınçlı Hava Kaçak Analizi ve Maliyet Hesabı | Optimizi">
+<meta property="og:description" content="Delik çapı ve basınç değerini girin, yıllık enerji kaybınızı ve CO2 salınımını saniyeler içinde öğrenin.">
+<meta property="og:image" content="https://www.optimizi.app/icon.jpg">
+<meta property="og:url" content="https://www.optimizi.app/tool/air.html">
+<meta property="og:type" content="article">
 
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/lucide@latest"></script>
@@ -516,3 +524,4 @@
 </script>
 </body>
 </html>
+
