--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Optimizi.App</title>
+  <meta name="description" content="Endüstriyel enerji verimliliği hesaplama platformu. Basınçlı hava kaçağı, yalıtım ROI ve ekonomik kalınlık hesaplamalarını saniyeler içinde yapın, profesyonel rapor alın.">
+<meta name="keywords" content="enerji verimliliği, mühendislik hesaplamaları, hava kaçağı hesabı, yalıtım roi, enerji tasarrufu, iso 1217, cagi, vdi 2055">
+<meta name="author" content="Optimizi.App">
+
+<meta property="og:title" content="Optimizi.App | Yeni Nesil Mühendislik Hesaplamaları">
+<meta property="og:description" content="Tesisinizdeki enerji kayıplarını tespit edin, kaçak maliyetlerini hesaplayın ve raporlayın. Ücretsiz mühendislik araçları.">
+<meta property="og:image" content="https://www.optimizi.app/icon.jpg"> <meta property="og:url" content="https://www.optimizi.app">
+<meta property="og:type" content="website">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Optimizi.App | Enerji Verimliliği Hesaplama Merkezi">
+<meta name="twitter:description" content="Sanayi tesisleri için profesyonel hesaplama araçları. Kaçakları bulun, tasarrufu hesaplayın.">
 
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/lucide@latest"></script>
@@ -433,5 +445,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </script>
 </body>
 </html>
+
 
 
