--- a/tools.html
+++ b/tools.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculation Tools</title>
+    <meta name="description" content="Tüm endüstriyel enerji verimliliği hesaplama araçlarına tek noktadan erişin. Isı yalıtımı, hava kaçağı ve ekonomik kalınlık analizleri.">
+<meta name="keywords" content="mühendislik hesaplama araçları, online hesaplama, enerji tasarrufu yazılımları, sanayi tipi hesaplamalar">
+
+<meta property="og:title" content="Optimizi.App | Hesaplama Araçları Kütüphanesi">
+<meta property="og:description" content="Boru ısı kaybı, vana ceketi, hava kaçağı ve daha fazlası. Profesyonel hesaplama araçlarını ücretsiz kullanın.">
+<meta property="og:image" content="https://www.optimizi.app/icon.jpg">
+<meta property="og:url" content="https://www.optimizi.app/tools.html">
+<meta property="og:type" content="website">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
@@ -343,3 +351,4 @@
 </body>
 
 </html>
+
