--- a/tool/thickness.html
+++ b/tool/thickness.html
@@ -4,6 +4,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Economic Thickness</title>
+  <meta name="description" content="VDI 2055 standartlarına göre optimum yalıtım kalınlığını hesaplayın. Enerji maliyeti ve yalıtım maliyeti arasındaki en karlı dengeyi bulun.">
+<meta name="keywords" content="ekonomik yalıtım kalınlığı, optimum izolasyon kalınlığı, vdi 2055 hesabı, yalıtım optimizasyonu">
+
+<meta property="og:title" content="Ekonomik Yalıtım Kalınlığı Hesabı | Optimizi">
+<meta property="og:description" content="Ne kadar kalınlıkta yalıtım yapmalısınız? Enerji fiyatlarına göre en karlı yalıtım kalınlığını bilimsel olarak hesaplayın.">
+<meta property="og:image" content="https://www.optimizi.app/icon.jpg">
+<meta property="og:url" content="https://www.optimizi.app/tool/thickness.html">
+<meta property="og:type" content="article">
 
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/lucide@latest"></script>
@@ -433,4 +441,5 @@
   updateUI();
 </script>
 </body>
+
 </html>
