--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <meta name="description" content="Optimizi.App ekibiyle iletişime geçin. Teknik destek, öneri ve kurumsal işbirlikleri için bize ulaşın.">
+<meta name="keywords" content="optimizi iletişim, mühendislik desteği, enerji verimliliği danışmanlık, optimizi.app kimdir">
+
+<meta property="og:title" content="İletişim | Optimizi.App">
+<meta property="og:description" content="Sorularınız mı var? Mühendislik ekibimizle iletişime geçin veya geri bildirimde bulunun.">
+<meta property="og:image" content="https://www.optimizi.app/icon.jpg">
+<meta property="og:url" content="https://www.optimizi.app/contact.html">
+<meta property="og:type" content="website">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
@@ -406,4 +414,5 @@
         }
     </script>
 </body>
+
 </html>
