--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Optimizi.App | Blog</title>
+    <meta name="description" content="Enerji verimliliği, endüstriyel yalıtım ve mühendislik hesaplamaları üzerine teknik makaleler ve rehberler.">
+<meta name="keywords" content="enerji verimliliği blog, mühendislik makaleleri, yalıtım rehberi, teknik kütüphane, iso standartları anlatımı">
+
+<meta property="og:title" content="Blog ve Teknik Kütüphane | Optimizi.App">
+<meta property="og:description" content="Endüstriyel enerji tasarrufu hakkında en güncel teknik bilgiler, standartlar ve uygulama ipuçları.">
+<meta property="og:image" content="https://www.optimizi.app/icon.jpg">
+<meta property="og:url" content="https://www.optimizi.app/blog.html">
+<meta property="og:type" content="website">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
@@ -282,4 +290,5 @@
         }
     </script>
 </body>
+
 </html>
