--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
 
                  <a href="tools.html" class="sidebar-link text-2xl font-bold text-slate-300 hover:text-white transition group flex items-center gap-4">
                     <span class="w-1 h-8 bg-blue-500 rounded-full scale-y-0 group-hover:scale-y-100 transition duration-300"></span>
-                    <span data-i18n="nav_home">Hesaplama Araçları</span>
+                    <span data-i18n="nav_tool">Hesaplama Araçları</span>
                 </a>
 
                 <a href="contact.html" class="sidebar-link text-2xl font-bold text-slate-300 hover:text-white transition group flex items-center gap-4">
@@ -421,4 +421,5 @@
 </body>
 
 </html>
+
 
