--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
 
                 <a href="contact.html" class="sidebar-link text-2xl font-bold text-slate-300 hover:text-white transition group flex items-center gap-4">
                     <span class="w-1 h-8 bg-indigo-500 rounded-full scale-y-0 group-hover:scale-y-100 transition duration-300"></span>
-                    <span data-i18n="nav_contact">Check-Up</span>
+                    <span data-i18n="nav_contact">İletişim</span>
                 </a>
                 
                 <a href="blog.html" class="sidebar-link text-2xl font-bold text-slate-300 hover:text-white transition group flex items-center gap-4">
@@ -197,7 +197,7 @@
                     </div>
 
                     <div class="mt-10 rounded-2xl overflow-hidden border border-white/10 relative group">
-                        <img src="https://optimizi.app/photos/tasarruf-takibi.png" 
+                        <img src="https://optimizi.app/photos/thermal-valve-2" 
                              class="w-full h-48 object-cover opacity-80 group-hover:opacity-100 transition duration-500 group-hover:scale-105" 
                              alt="Termal Kamera Uygulama">
                         
@@ -376,4 +376,5 @@
     </script>
 </body>
 </html>
+
 
