--- a/contact.html
+++ b/contact.html
@@ -197,7 +197,7 @@
                     </div>
 
                     <div class="mt-10 rounded-2xl overflow-hidden border border-white/10 relative group">
-                        <img src="https://optimizi.app/photos/thermal-valve-2" 
+                        <img src="https://optimizi.app/photos/thermal-valve-2.png" 
                              class="w-full h-48 object-cover opacity-80 group-hover:opacity-100 transition duration-500 group-hover:scale-105" 
                              alt="Termal Kamera Uygulama">
                         
@@ -376,5 +376,6 @@
     </script>
 </body>
 </html>
+
 
 
