--- a/tool/thickness.html
+++ b/tool/thickness.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Economic Thickness</title>
+<title>Optimum Yalıtım Kalınlığı Hesaplama</title>
   <meta name="description" content="VDI 2055 standartlarına göre optimum yalıtım kalınlığını hesaplayın. Enerji maliyeti ve yalıtım maliyeti arasındaki en karlı dengeyi bulun.">
 <meta name="keywords" content="ekonomik yalıtım kalınlığı, optimum izolasyon kalınlığı, vdi 2055 hesabı, yalıtım optimizasyonu">
 
@@ -443,3 +443,4 @@
 </body>
 
 </html>
+
