--- a/track.html
+++ b/track.html
@@ -20,7 +20,17 @@
   }
 </script>
 <style>
-  body { background: #010409; color: #f1f5f9; min-height: 100vh; display: flex; flex-direction: column; overflow: hidden; position: relative; }
+  /* FIX: overflow: hidden yerine auto yapıldı, min-height düzeltildi */
+  body { 
+      background: #010409; 
+      color: #f1f5f9; 
+      min-height: 100vh; 
+      display: flex; 
+      flex-direction: column; 
+      overflow-x: hidden; 
+      overflow-y: auto; /* Dikey kaydırmaya izin ver */
+      position: relative; 
+  }
   .glass-card { background-color: rgba(10, 15, 29, 0.85); backdrop-filter: blur(25px); border: 1px solid rgba(255, 255, 255, 0.05); z-index: 10; }
   
   .bg-grid { 
@@ -32,11 +42,11 @@
 </head>
 <body class="antialiased font-sans">
 
-<div class="fixed inset-0 z-0 bg-grid opacity-20"></div>
+<div class="fixed inset-0 z-0 bg-grid opacity-20 pointer-events-none"></div>
 
-<main class="relative z-10 flex-1 flex flex-col items-center justify-center p-4 w-full max-w-md mx-auto">
+<main class="relative z-10 flex-1 flex flex-col items-center justify-center p-6 w-full max-w-md mx-auto my-10">
     
-    <div class="mb-6 scale-110">
+    <div class="mb-8 scale-110">
         <h1 class="text-2xl font-black text-white tracking-tighter uppercase italic">Optimizi<span class="text-green-500">.App</span></h1>
     </div>
 
@@ -107,7 +117,7 @@
 
     </div>
     
-    <div class="mt-8 opacity-50 hover:opacity-100 transition">
+    <div class="mt-8 mb-4 opacity-50 hover:opacity-100 transition">
         <div class="flex items-center justify-center gap-2 text-[10px] text-slate-500 font-bold tracking-widest">
             <i data-lucide="shield-check" class="w-3 h-3 text-green-500"></i> Verified by Optimizi.App
         </div>
@@ -129,23 +139,18 @@
         client: params.get('c') ? decodeURIComponent(params.get('c')) : null
     };
 
-    // --- YAKIT AYARLARI (GENERATOR İLE EŞİTLENDİ) ---
     const fuels = {
         gas:       { unit: 'm³',  co2: 0.0019, label: 'Doğalgaz' },    
         elec:      { unit: 'kWh', co2: 0.00045, label: 'Elektrik' },   
         lng:       { unit: 'kg',  co2: 0.0028, label: 'LNG' },         
         fueloil:   { unit: 'kg',  co2: 0.0031, label: 'Fuel Oil' },    
-        // İthal ve Yerli Kömür Eklendi:
         coal_imp:  { unit: 'kg',  co2: 0.0025, label: 'İthal Kömür' }, 
         coal_loc:  { unit: 'kg',  co2: 0.0015, label: 'Yerli Kömür' },
-        // Eski kodlarla uyumluluk için (Fallback)
         coal:      { unit: 'kg',  co2: 0.0025, label: 'Kömür' } 
     };
 
-    // Seçilen yakıtı ayarla
     const f = fuels[config.fuel] || fuels.gas;
 
-    // UI Doldur
     document.getElementById('prdName').innerText = config.name;
     document.getElementById('prdSerial').innerText = `ID: ${config.sn}`;
     document.getElementById('fuelUnit').innerText = f.unit;
@@ -173,13 +178,10 @@
             const co2Ton = fuelAmount * f.co2;
             const trees = co2Ton / 0.025;
 
-            // Para Formatı
             const moneyStr = money.toLocaleString('tr-TR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
             const moneyEl = document.getElementById('liveMoney');
             moneyEl.innerText = moneyStr;
 
-            // --- AUTO-SCALE FONT BOYUTU ---
-            // Rakamın uzunluğuna göre fontu küçült (Örn: 1.250.000,00 -> 12 karakter)
             const len = moneyStr.length;
             if(len > 13) {
                 moneyEl.className = "font-black text-white counter-text tracking-tighter drop-shadow-[0_0_10px_rgba(34,197,94,0.5)] transition-all duration-300 text-3xl"; 
