--- a/tool/thickness.html
+++ b/tool/thickness.html
@@ -7,7 +7,7 @@
   <meta name="description" content="VDI 2055 standartlarına göre optimum yalıtım kalınlığını hesaplayın. Enerji maliyeti ve yalıtım maliyeti arasındaki en karlı dengeyi bulun.">
 <meta name="keywords" content="ekonomik yalıtım kalınlığı, optimum izolasyon kalınlığı, vdi 2055 hesabı, yalıtım optimizasyonu">
 
-<meta property="og:title" content="Ekonomik Yalıtım Kalınlığı Hesabı | Optimizi">
+<meta property="og:title" content="Enerji Verimlilik Sınıfı (Energy Class)">
 <meta property="og:description" content="Ne kadar kalınlıkta yalıtım yapmalısınız? Enerji fiyatlarına göre en karlı yalıtım kalınlığını bilimsel olarak hesaplayın.">
 <meta property="og:image" content="https://www.optimizi.app/icon.jpg">
 <meta property="og:url" content="https://www.optimizi.app/tool/thickness.html">
@@ -443,4 +443,5 @@
 </body>
 
 </html>
+
 
