--- a/tools.html
+++ b/tools.html
@@ -222,7 +222,7 @@
                     <div class="w-16 h-16 rounded-2xl bg-indigo-500/20 text-indigo-400 flex items-center justify-center mb-6 group-hover:scale-110 group-hover:bg-indigo-500 group-hover:text-white transition-all duration-300 border border-indigo-500/30 shadow-lg shadow-indigo-500/10">
                         <i data-lucide="layers" class="w-8 h-8"></i>
                     </div>
-                    <h3 class="text-2xl font-bold mb-3 text-white group-hover:text-indigo-400 transition-colors" data-i18n="card_3_title">Ekonomik Kalınlık</h3>
+                    <h3 class="text-2xl font-bold mb-3 text-white group-hover:text-indigo-400 transition-colors" data-i18n="card_3_title">Enerji Verimlilik Sınıfı Hesaplama</h3>
                     <p class="text-sm text-slate-400 mb-8 leading-relaxed group-hover:text-slate-300 transition-colors" data-i18n="card_3_desc">
                         Optimum yalıtım kalınlığının VDI 2055 standartlarına göre belirlenmesi.
                     </p>
@@ -342,4 +342,5 @@
     </script>
 </body>
 </html>
+
 
