--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta name="keywords" content="enerji verimliliği, mühendislik hesaplamaları, hava kaçağı hesabı, yalıtım roi, enerji tasarrufu, iso 1217, cagi, vdi 2055">
 <meta name="author" content="Optimizi.App">
 
-<meta property="og:title" content="Optimizi.App | Yeni Nesil Mühendislik Hesaplamaları">
+<meta property="og:title" content="Enerji Verimliliği Hesaplamaları">
 <meta property="og:description" content="Tesisinizdeki enerji kayıplarını tespit edin, kaçak maliyetlerini hesaplayın ve raporlayın. Ücretsiz mühendislik araçları.">
 <meta property="og:image" content="https://www.optimizi.app/icon.jpg"> <meta property="og:url" content="https://www.optimizi.app">
 <meta property="og:type" content="website">
@@ -445,6 +445,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </script>
 </body>
 </html>
+
 
 
 
