--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         
         <nav class="flex flex-col gap-6">
-            <a href="tools.html" class="sidebar-link text-2xl font-bold text-slate-300 hover:text-white transition group flex items-center gap-4">
+            <a href="endustriyel-enerji-kaybi-hesaplama" class="sidebar-link text-2xl font-bold text-slate-300 hover:text-white transition group flex items-center gap-4">
                 <span class="w-1 h-8 bg-purple-500 rounded-full scale-y-0 group-hover:scale-y-100 transition duration-300"></span>
                 <span data-i18n="nav_tools">Hesaplama Araçları</span>
             </a>
@@ -445,6 +445,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </script>
 </body>
 </html>
+
 
 
 
