--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         
         <nav class="flex flex-col gap-6">
-            <a href="endustriyel-enerji-kaybi-hesaplama" class="sidebar-link text-2xl font-bold text-slate-300 hover:text-white transition group flex items-center gap-4">
+            <a href="endustriyel-enerji-kaybi-hesaplama.html" class="sidebar-link text-2xl font-bold text-slate-300 hover:text-white transition group flex items-center gap-4">
                 <span class="w-1 h-8 bg-purple-500 rounded-full scale-y-0 group-hover:scale-y-100 transition duration-300"></span>
                 <span data-i18n="nav_tools">Hesaplama Araçları</span>
             </a>
@@ -214,7 +214,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <button onclick="toggleLang()" class="flex items-center gap-2 px-4 py-2 rounded-full bg-slate-800/80 hover:bg-slate-700 text-white transition border border-slate-600 shadow-lg shadow-black/20">
                 <span id="langFlag" class="text-base">🇬🇧</span><span id="langText" class="text-xs font-bold hidden sm:inline">EN</span>
             </button>
-            <a href="endustriyel-enerji-kaybi-hesaplama" class="hidden sm:flex items-center gap-2 px-6 py-2.5 bg-gradient-to-r from-indigo-600 via-purple-600 to-orange-500 hover:from-indigo-500 hover:to-orange-400 text-white rounded-full font-bold transition shadow-lg shadow-indigo-500/25 active:scale-95">
+            <a href="endustriyel-enerji-kaybi-hesaplama.html" class="hidden sm:flex items-center gap-2 px-6 py-2.5 bg-gradient-to-r from-indigo-600 via-purple-600 to-orange-500 hover:from-indigo-500 hover:to-orange-400 text-white rounded-full font-bold transition shadow-lg shadow-indigo-500/25 active:scale-95">
                 <span data-i18n="btn_tools">Araçları İncele</span><i data-lucide="arrow-right" class="w-4 h-4"></i>
             </a>
         </div>
@@ -327,7 +327,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="relative z-10">
                 <h2 class="text-4xl md:text-5xl font-black mb-6 text-white" data-i18n="cta_title">Analize Başlamaya Hazır Mısınız?</h2>
                 <p class="text-lg text-slate-300 mb-10 max-w-xl mx-auto" data-i18n="cta_desc">Ücretsiz araçlarımızı kullanarak tesisinizdeki potansiyeli keşfedin.</p>
-                <a href="endustriyel-enerji-kaybi-hesaplama" class="inline-flex items-center gap-3 px-10 py-5 bg-white text-slate-900 hover:bg-slate-200 rounded-full font-bold text-lg transition shadow-xl shadow-white/10 hover:scale-105 active:scale-95">
+                <a href="endustriyel-enerji-kaybi-hesaplama.html" class="inline-flex items-center gap-3 px-10 py-5 bg-white text-slate-900 hover:bg-slate-200 rounded-full font-bold text-lg transition shadow-xl shadow-white/10 hover:scale-105 active:scale-95">
                     <span data-i18n="cta_btn">Araçlara Git</span><i data-lucide="arrow-right" class="w-5 h-5 text-indigo-600"></i>
                 </a>
             </div>
@@ -445,6 +445,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </script>
 </body>
 </html>
+
 
 
 
