--- a/iletisim.html
+++ b/iletisim.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Optimizi Check-Up | Randevu</title>
+    <title>İletişim</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
@@ -376,6 +376,7 @@
     </script>
 </body>
 </html>
+
 
 
 
