--- a/endustriyel-enerji-kaybi-hesaplama.html
+++ b/endustriyel-enerji-kaybi-hesaplama.html
@@ -154,8 +154,8 @@
         
         <div class="text-center max-w-3xl mb-16 animate-float-slow">
             <h1 class="text-5xl md:text-7xl font-black mb-6 leading-[1.1] tracking-tight text-white">
-                <span data-i18n="hero_title_1">Hesaplama</span> <br>
-                <span class="text-gradient-dynamic" data-i18n="hero_title_2">Merkezi</span>
+                <span data-i18n="hero_title_1">Enerji Verimliliği</span> <br>
+                <span class="text-gradient-dynamic" data-i18n="hero_title_2">Hesaplama</span>
             </h1>
             <p class="text-slate-300 text-lg leading-relaxed max-w-2xl mx-auto" data-i18n="hero_desc">
                 Tesisinizdeki enerji kayıplarını tespit edin, yatırım geri dönüşlerini (ROI) hesaplayın ve karbon ayak izinizi yönetin.
@@ -342,5 +342,6 @@
     </script>
 </body>
 </html>
+
 
 
