--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <span class="w-2 h-2 rounded-full bg-indigo-500 animate-pulse"></span> <span data-i18n="hero_badge">Enerji Verimliliği Hesaplamaları</span>
             </div>
             <h1 class="text-5xl lg:text-7xl font-black tracking-tight mb-8 leading-[1.1] text-white">
-                <span data-i18n="hero_t1">Görünmez Kayıpları</span> <br> <span class="text-gradient-dynamic" data-i18n="hero_t2">Görünür Kılın.</span>
+                <span data-i18n="hero_t1">Endüstriyel İzolasyon ve</span> <br> <span class="text-gradient-dynamic" data-i18n="hero_t2">Enerji Verimliliği.</span>
             </h1>
             <p class="text-lg text-slate-300 max-w-xl mx-auto lg:mx-0 mb-10 leading-relaxed" data-i18n="hero_desc">Endüstriyel tesislerdeki ısı kayıplarını, verimsiz hatları ve gereksiz maliyetleri mühendislik standartlarıyla analiz eden yeni nesil platform.</p>
             <div class="flex flex-col sm:flex-row items-center justify-center lg:justify-start gap-4">
@@ -445,6 +445,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </script>
 </body>
 </html>
+
 
 
 
