--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             nav_tools: "Hesaplama Araçları",
 
             nav_contact: "İletişim", nav_blog: "Blog", nav_social: "Sosyal Medya",
-            btn_tools: "Araçları İncele", hero_badge: "Enerji Verimliliği Hesaplamaları", hero_t1: "Görünmez Kayıpları", hero_t2: "Görünür Kılın.", hero_desc: "Endüstriyel tesislerdeki ısı kayıplarını, verimsiz hatları ve gereksiz maliyetleri mühendislik standartlarıyla analiz eden yeni nesil platform.",
+            btn_tools: "Araçları İncele", hero_badge: "Enerji Verimliliği Hesaplamaları", hero_t1: "Endüstriyel İzolasyon ve", hero_t2: "Enerji Verimliliği.", hero_desc: "Endüstriyel tesislerdeki ısı kayıplarını, verimsiz hatları ve gereksiz maliyetleri mühendislik standartlarıyla analiz eden yeni nesil platform.",
             btn_learn: "Nasıl Çalışır?", sec_vis_title: "Veriyi Sanata Dönüştürün", sec_vis_desc: "Sadece hesaplama yapmayın. Sonuçları görselleştirin, raporlayın ve ikna edin. Karmaşık termal denklemlerin arkasındaki basit gerçeği görün.",
             feat_1_t: "Güvenilir Standartlar", feat_1_d: "Tüm hesaplamalar ISO 12241, ASTM C680 ve VDI 2055 mühendislik normlarına %100 uygun olarak simüle edilir.",
             feat_2_t: "Bulut Tabanlı", feat_2_d: "Kurulum yok, güncelleme derdi yok. Bilgisayar, tablet veya telefonunuzdan anında erişin ve hesaplamaya başlayın.",
@@ -445,6 +445,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </script>
 </body>
 </html>
+
 
 
 
