--- a/track.html
+++ b/track.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
 <title>Canlı Tasarruf | Optimizi</title>
+  <link rel="icon" href="favicon.png" type="image/png">
 <meta name="robots" content="noindex">
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/lucide@latest"></script>
@@ -207,3 +208,4 @@
 </script>
 </body>
 </html>
+
