--- a/track.html
+++ b/track.html
@@ -161,7 +161,7 @@
     document.getElementById('clientDisplay').innerText = config.client || 'Yalıtım Projesi';
     document.getElementById('fuelUnit').innerText = fData.unit;
     document.getElementById('fuelLabel').innerText = fData.label; 
-    document.getElementById('prdName').innerText = (config.client ? "Enerji Takip Sistemi" : "Endüstriyel Yalıtım");
+    document.getElementById('prdName').innerText = (config.client ? "Canlı Amortisman Sayacı" : "Endüstriyel Yalıtım");
 
     document.getElementById('dispHours').innerText = config.workHours;
     document.getElementById('dispPrice').innerText = `${config.unitPrice} TL (${fData.label})`;
@@ -208,4 +208,5 @@
 </script>
 </body>
 </html>
+
 
