--- a/tool/anlik-kayip.html
+++ b/tool/anlik-kayip.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enerji Audit & Kayıp Analizi | Optimizi</title>
+    <title>Enerji Kayıp Analizi</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
@@ -514,4 +514,5 @@
 
 </script>
 </body>
+
 </html>
