--- a/tool/roi.html
+++ b/tool/roi.html
@@ -557,7 +557,7 @@
 
     function initApp(){ init(); }
     
-    // Formatter
+    // FORMATTER: 2 DECIMAL PRECISION (EXCEL-LIKE)
     function fmt(n){ return n.toLocaleString('tr-TR', { minimumFractionDigits: 2, maximumFractionDigits: 2 }); }
     
     function setType(t){
